Add initial structure css

--- a/index.html
+++ b/index.html
@@ -32,6 +32,114 @@
 
 <body>
 	<div id="root">
+		<div class="container">
+
+			<div class="row my-5">
+
+				<!-- LEFT BLOCK (CONTATTI) -->
+				<div id="contact-structure" class="col-4">
+
+					<!-- HEADER USER -->
+					<div class="header-user row">
+						<div class=" col-2">
+							IMG user
+						</div>
+						<div class="col">
+							name
+						</div>
+						<div class="col">
+							icon
+						</div>
+
+
+					</div>
+
+					<!-- NOTIFICATION AREA -->
+					<div class="row notification">
+						<div class="col-12 ">
+							NOTIFICHE DESKTOP
+						</div>
+					</div>
+
+					<!-- INPUT SEARCH CONTACT -->
+					<div class="row input-search-contact">
+						<div class="col-12 ">
+							<div class="input-group mb-3">
+								<button class="btn btn-outline-secondary" type="button" id="button-addon1">Icon</button>
+								<input type="text" class="form-control" placeholder=""
+									aria-label="Example text with button addon" aria-describedby="button-addon1">
+							</div>
+						</div>
+					</div>
+
+					<!-- CONTACT BLOCK -->
+					<div class="contact-block row flex-column">
+
+						<div class="contact-card d-flex">
+							<div class="col">
+								IMG contact
+							</div>
+							<div class="col">
+								Name contact
+							</div>
+						</div>
+
+					</div>
+				</div>
+
+				<!-- RIGHT BLOCK (CHAT) -->
+				<div id="message-structure" class="col-8 ">
+
+					<!-- HEADER MESSAGGE CHAT -->
+					<div class="header-message row">
+						<div class=" col-2">
+							IMG contact
+						</div>
+						<div class="col">
+							name,access contact
+						</div>
+						<div class="col-2">
+							icon
+						</div>
+					</div>
+
+					<!-- TEXT AREA CHAT  -->
+					<div class="text-area-message row">
+						<div class="col-12 p-5">
+
+							<!-- Message row -->
+							<div class="row row-cols-1">
+								<div class="col message-sent">
+									Messaggio Inviato
+								</div>
+								<div class="col message-received">Messaggio Ricevuto</div>
+
+							</div>
+
+						</div>
+					</div>
+
+					<!-- BOTTOM INPUT MESSAGE CHAT -->
+					<div class="bottom-input-message row justify-content-between ">
+						<div class=" col-1">
+							icon
+						</div>
+
+						<div class="col-9">
+							<div class="input-group mb-3">
+								<input type="text" class="form-control" placeholder="Scrivi un messaggio"
+									aria-label="Scrivi un messaggio" aria-describedby="button-addon1">
+							</div>
+						</div>
+
+						<div class="col-1">
+							icon
+						</div>
+					</div>
+				</div>
+
+			</div>
+		</div>
 
 	</div>
 
