--- a/index.html
+++ b/index.html
@@ -2,151 +2,155 @@
 <html lang="en">
 
 <head>
-	<!-- META TAGS -->
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- META TAGS -->
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<!-- TITLE -->
-	<title>BoolZap </title>
+    <!-- TITLE -->
+    <title>BoolZap </title>
 
-	<!-- BOOTSTRAP -->
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-		integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <!-- BOOTSTRAP -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
-	<!-- FONT AWESOME -->
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
-		integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
-		crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- FONT AWESOME -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+        integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-	<!-- CUSTOM CSS -->
-	<link rel="stylesheet" href="./css/style.css">
+    <!-- CUSTOM CSS -->
+    <link rel="stylesheet" href="./css/style.css">
 
-	<!-- VUE JS -->
-	<script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+    <!-- VUE JS -->
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 
 
-	<!-- MAIN JS -->
-	<script type="text/javascript" src="./js/main.js" defer></script>
+    <!-- MAIN JS -->
+    <script type="text/javascript" src="./js/main.js" defer></script>
 </head>
 
 <body>
-	<div id="root">
-		<div class="container">
+    <div id="root">
+        <div class="container">
 
-			<div class="row my-5">
+            <div class="row my-5">
 
-				<!-- LEFT BLOCK (CONTATTI) -->
-				<div id="contact-structure" class="col-4">
+                <!-- LEFT BLOCK (CONTATTI) -->
+                <div id="contact-structure" class="col-4">
 
-					<!-- HEADER USER -->
-					<div class="header-user row">
-						<div class=" col-2">
-							IMG user
-						</div>
-						<div class="col">
-							name
-						</div>
-						<div class="col">
-							icon
-						</div>
+                    <!-- HEADER USER -->
+                    <div class="header-user row">
+                        <div class=" col-2">
+                            IMG user
+                        </div>
+                        <div class="col">
+                            name
+                        </div>
+                        <div class="col">
+                            icon
+                        </div>
 
 
-					</div>
+                    </div>
 
-					<!-- NOTIFICATION AREA -->
-					<div class="row notification">
-						<div class="col-12 ">
-							NOTIFICHE DESKTOP
-						</div>
-					</div>
+                    <!-- NOTIFICATION AREA -->
+                    <div class="row notification">
+                        <div class="col-12 ">
+                            NOTIFICHE DESKTOP
+                        </div>
+                    </div>
 
-					<!-- INPUT SEARCH CONTACT -->
-					<div class="row input-search-contact">
-						<div class="col-12 ">
-							<div class="input-group mb-3">
-								<button class="btn btn-outline-secondary" type="button" id="button-addon1">Icon</button>
-								<input type="text" class="form-control" placeholder=""
-									aria-label="Example text with button addon" aria-describedby="button-addon1">
-							</div>
-						</div>
-					</div>
+                    <!-- INPUT SEARCH CONTACT -->
+                    <div class="row input-search-contact">
+                        <div class="col-12 ">
+                            <div class="input-group mb-3">
+                                <button class="btn btn-outline-secondary" type="button" id="button-addon1">Icon</button>
+                                <input type="text" class="form-control" placeholder=""
+                                    aria-label="Example text with button addon" aria-describedby="button-addon1">
+                            </div>
+                        </div>
+                    </div>
 
-					<!-- CONTACT BLOCK -->
-					<div class="contact-block row">
+                    <!-- CONTACT BLOCK -->
+                    <div class="contact-block row">
 
-						<!--Creato un ciclo che ritorna (contatto,indice)
+                        <!--Creato un ciclo che ritorna (contatto,indice)
 						IN lista contatti e stampa contatto.nome -->
-						<!--Intercettato il CLICK su una scheda (fa ritornare l'indice cliccato)  -->
-						<div @click="switchToChat(index)" v-for="(contact,index) in contacts"
-							class="contact-card col-12 d-flex">
-							<div class="col-auto">
-								<img :src="'./img/avatar'+contact.avatar+'.jpg'" alt="">
-							</div>
-							<div class="col">
-								<p>{{contact.name}}</p>
-							</div>
-						</div>
+                        <!--Intercettato il CLICK su una scheda (fa ritornare l'indice cliccato)  -->
+                        <div @click="switchToChat(index)" v-for="(contact,index) in contacts"
+                            class="contact-card col-12 d-flex">
+                            <div class="col-auto">
+                                <img :src="'./img/avatar'+contact.avatar+'.jpg'" alt="">
+                            </div>
+                            <div class="col">
+                                <p>{{contact.name}}</p>
+                            </div>
+                        </div>
 
-					</div>
-				</div>
+                    </div>
+                </div>
 
-				<!-- RIGHT BLOCK (CHAT) -->
-				<div id="message-structure" class="col-8 ">
+                <!-- RIGHT BLOCK (CHAT) -->
+                <div id="message-structure" class="col-8 ">
 
-					<!-- HEADER MESSAGGE CHAT -->
-					<div class="header-message row">
-						<div class=" col-2">
-							IMG contact
-						</div>
-						<div class="col">
-							name,access contact
-						</div>
-						<div class="col-2">
-							icon
-						</div>
-					</div>
+                    <!-- HEADER MESSAGGE CHAT -->
+                    <div class="header-message row">
+                        <div class=" col-2">
+                            <img :src="'./img/avatar'+ contacts[activeUser].avatar +'.jpg'" alt="">
+                        </div>
+                        <div class="col">
+                            name,access contact
+                        </div>
+                        <div class="col-2">
+                            icon
+                        </div>
+                    </div>
 
-					<!-- TEXT AREA CHAT  -->
-					<div class="text-area-message row">
-						<div class="col-12 p-5">
+                    <!-- TEXT AREA CHAT  -->
+                    <div class="text-area-message row">
+                        <div class="col-12 p-5">
 
-							<!-- Message row -->
-							<div class="row row-cols-1">
+                            <!-- Message row -->
+                            <div class="row row-cols-1">
 
-								<div v-for="message in contacts[activeUser].messages" class="col"
-									:class="{ 'message-sent': message.status === 'sent', 'message-received': message.status === 'received' }">
-									{{message.message}}
-								</div>
+                                <div v-for="message in contacts[activeUser].messages" class="col"
+                                    :class="{ 'message-sent': message.status === 'sent', 'message-received': message.status === 'received' }">
+                                    {{message.message}}
+                                </div>
 
-							</div>
+                            </div>
 
-						</div>
-					</div>
+                        </div>
+                    </div>
 
-					<!-- BOTTOM INPUT MESSAGE CHAT -->
-					<div class="bottom-input-message row justify-content-between ">
-						<div class=" col-1">
-							icon
-						</div>
+                    <!-- BOTTOM INPUT MESSAGE CHAT -->
+                    <div class="bottom-input-message row justify-content-between ">
+                        <div class=" col-1">
+                            icon
+                        </div>
 
-						<div class="col-9">
-							<div class="input-group mb-3">
-								<input type="text" class="form-control" placeholder="Scrivi un messaggio"
-									aria-label="Scrivi un messaggio" aria-describedby="button-addon1">
-							</div>
-						</div>
+                        <div class="col-9">
+                            <div class="input-group mb-3">
+                                <!-- // ! DA RIVEDERE -->
+                                <input @keyup.enter="addNewMessage(activeUser);automaticReply(activeUser)"
+                                    v-model="newMessageSent.message" type="text" class="form-control"
+                                    placeholder="Scrivi un messaggio" aria-label="Scrivi un messaggio"
+                                    aria-describedby="button-addon1">
+                            </div>
+                        </div>
 
-						<div class="col-1">
-							icon
-						</div>
-					</div>
-				</div>
+                        <div class="col-1">
+                            icon
+                        </div>
+                    </div>
 
-			</div>
-		</div>
+                </div>
 
-	</div>
+            </div>
+        </div>
+
+    </div>
 
 </body>
 
